--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,4 @@
  <header class="navbar navbar-fixed-top navbar-inverse">
-   <meta name="viewport" content="width=320, initial-scale=1" />
       <div class="container">
        <%= link_to "sample app", root_path, id: "logo" %>  
         <!-- <%= link_to image_tag("MNC_BANK_logo.png", alt: "MNCBank logo", width: "285", height: "60"), 'http://mncbank.co.id/' %> -->
@@ -8,7 +7,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Home",  root_path %></li>
               <li><%= link_to "Help",  help_path %></li>
-              <li><%= link_to "Log in",  '#' %></li>
+              <li><%= link_to "Sign Up",  signup_path %></li>
           </ul>
         </nav>
      </div> 
