--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,12 +3,14 @@
        <%= link_to "sample app", root_path, id: "logo" %>  
         <!-- <%= link_to image_tag("MNC_BANK_logo.png", alt: "MNCBank logo", width: "285", height: "60"), 'http://mncbank.co.id/' %> -->
         <nav>
+          <div class="navbar-collapse collapse">
           <ul>
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Home",  root_path %></li>
               <li><%= link_to "Help",  help_path %></li>
               <li><%= link_to "Sign Up",  signup_path %></li>
           </ul>
+          </div>
         </nav>
      </div> 
 </header>
