--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
 </header> -->
 
 <div class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
+  <div class="navbar-right">
     <a class="brand" href="#">Sample App</a>
     <ul class="nav">
       <li class="active"><%= link_to "Home",  root_path %></li>
