--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,8 @@
 </header> -->
 
 <div class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-right">
-    <a class="brand" href="#">Sample App</a>
+  <a class="brand" href="#">Sample App</a>
+  <div class="nav navbar-nav navbar-right">
     <ul class="nav">
       <li class="active"><%= link_to "Home",  root_path %></li>
       <li><%= link_to "Help",  help_path %></li>
