--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,11 +15,13 @@
 
 <div class="navbar navbar-fixed-top navbar-inverse">
   <a class="brand" href="#">Sample App</a>
-  <div class="nav navbar-nav navbar-right">
-    <ul class="nav">
-      <li class="active"><%= link_to "Home",  root_path %></li>
-      <li><%= link_to "Help",  help_path %></li>
-      <li><%= link_to "Sign Up",  signup_path %></li>
-    </ul>
+  <div class="navbar-right">
+    <div class="container">
+      <ul class="nav navbar-nav">
+        <li class="active"><%= link_to "Home",  root_path %></li>
+        <li><%= link_to "Help",  help_path %></li>
+        <li><%= link_to "Sign Up",  signup_path %></li>
+      </ul>
+    </div>
   </div>
 </div>
