--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,9 +15,8 @@
 
 <div class="navbar navbar-fixed-top navbar-inverse">
   <a class="brand" href="#">Sample App</a>
-  <div class="navbar-right">
     <div class="container">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav navbar-right">
         <li class="active"><%= link_to "Home",  root_path %></li>
         <li><%= link_to "Help",  help_path %></li>
         <li><%= link_to "Sign Up",  signup_path %></li>
