return to original layout, meh

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
- <!-- <header class="navbar navbar-fixed-top navbar-inverse">
+ <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-    <!--   <%= link_to "sample app", root_path, id: "logo" %>  
-        <!-- <%= link_to image_tag("MNC_BANK_logo.png", alt: "MNCBank logo", width: "285", height: "60"), 'http://mncbank.co.id/' %> -->
-   <!--     <nav>
+       <%= link_to "sample app", root_path, id: "logo" %>  
+  <!-- <%= link_to image_tag("MNC_BANK_logo.png", alt: "MNCBank logo", width: "285", height: "60"), 'http://mncbank.co.id/' %> -->
+        <nav>
           <ul>
             <ul class="nav navbar-nav navbar-right">
               <li><%= link_to "Home",  root_path %></li>
@@ -11,8 +11,9 @@
           </ul>
         </nav>
      </div> 
-</header> -->
+</header> 
 
+<!-- FAILLLL
 <div class="navbar navbar-fixed-top navbar-inverse">
   <a class="brand" href="#">Sample App</a>
     <div class="container">
@@ -24,3 +25,4 @@
     </div>
   </div>
 </div>
+-->
