mobile header experiment

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
- <header class="navbar navbar-fixed-top navbar-inverse">
+ <header class="navbar navbar-fixed-top navbar-static navbar-inverse">
       <div class="container">
        <%= link_to "sample app", root_path, id: "logo" %>  
   <!-- <%= link_to image_tag("MNC_BANK_logo.png", alt: "MNCBank logo", width: "285", height: "60"), 'http://mncbank.co.id/' %> -->
