--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
     sample application.
   </h2>
 
-  <%= link_to "Login", '#' , class: "btn btn-lg btn-primary" %>
+  <%= link_to "Log in", login_path , class: "btn btn-lg btn-primary" %>
 </div>
 
 <!-- <%= link_to image_tag("rails.png", alt: "Rails logo"),
