--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,19 +4,8 @@
 <div class = "row">
   <div class = "col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
-    <%= render 'shared/error_messages', object: f.object %>
     
-        <%= f.label :name %>
-        <%= f.text_field :name, class: 'form_control' %>
-
-        <%= f.label :email %>
-        <%= f.email_field :email, class: 'form_control' %>
-
-        <%= f.label :password %>
-        <%= f.password_field :password, class: 'form_control' %>
-
-        <%= f.label :password_confirmation, "Confirm your password" %>
-        <%= f.password_field :password_confirmation, class: 'form_control' %>
+        <%= render 'fields', f: f %>
 
         <%= f.submit "Save changes", class: "btn btn-primary" %>
     
@@ -26,4 +15,3 @@
       <a href="http://gravatar.com/emails" target="_blank">change</a>
     </div>
   </div>
-</div>
